all bugs squashed

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ body {
   position: absolute;
   overflow: auto;
   height: 600px;
-  width: 25%;
+  width: 35%;
   left: 65%;
   top: 100px;
   padding-left: 30px;
